# Easy-answers

./: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/release/: output-metadata.json
android/app/src/main/: AndroidManifest.xml
android/app_config/: build.gradle  proguard-rules.pro
android/app_config/release/: output-metadata.json
public/banks/: 01第一周考题（答案）.json  02第二周考题（答案）.json  03第三周考题（答案）.json  04第四周考题（答案）.json  05第五周考题（答案）.json  06第六周考题（答案）.json  07第七周考题（答案）.json  08第八周考题（答案）.json  09第九周考题（答案）.json  10第十周考题（答案）.json
scripts/: build-sync.ps1  create-ico.js  create-icons.js  parse-pdf.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmHost.tsx  PromptHost.tsx
src/native/: configBridge.ts
src/pages/: BankList.tsx  ChapterSelect.tsx  Config.tsx  Exam.tsx  Home.tsx  Import.tsx  Logs.tsx  QuestionBankDetail.tsx  Records.tsx  Result.tsx  Settings.tsx
src/store/: confirmStore.ts  examStore.ts  logStore.ts  promptStore.ts  questionBankStore.ts  recordStore.ts  settingsStore.ts  studyStore.ts
src/utils/: aiGrader.ts  builtInBanks.ts  jsonImporter.ts  similarity.ts  tauriStore.ts
题库文件/: 01第一周考题（答案）.json  02第二周考题（答案）.json  03第三周考题（答案）.json  04第四周考题（答案）.json  05第五周考题（答案）.json  06第六周考题（答案）.json  07第七周考题（答案）.json  08第八周考题（答案）.json  09第九周考题（答案）.json  10第十周考题（答案）.json
(+13 files in other folders)
